--- a/some_question.ipynb
+++ b/some_question.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "a16b25c7-d5e4-462d-a57f-21a0b3ce9b3e",
    "metadata": {},
    "outputs": [
@@ -88,23 +88,27 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "enter the number 15\n",
-      "enter the 2nd number 24\n",
-      "enter the op -\n"
+      "enter the number 12\n",
+      "enter the 2nd number 12\n",
+      "enter the op *\n",
+      "enter any thi hello\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-9\n"
+      "12 12.0 * hello\n",
+      "144.0\n"
      ]
     }
    ],
    "source": [
     "num1 = int(input(\"enter the number\"))\n",
-    "num2 = int(input(\"enter the 2nd number\"))\n",
-    "op = input(\"enter the op\")\n",
+    "num2 = float(input(\"enter the 2nd number\"))\n",
+    "op = str(input(\"enter the op\"))\n",
+    "op1 = input(\"enter any thi\")\n",
+    "print(num1, num2, op, op1)\n",
     "\n",
     "if op == \"+\":\n",
     "    print(num1+num2)\n",
