factorial Loop Working

--- a/practical_3.ipynb
+++ b/practical_3.ipynb
@@ -171,13 +171,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "85f1649f-d800-4a7e-b23d-40fdfc34e4ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "10\n",
+      "30\n",
+      "120\n"
+     ]
+    }
+   ],
    "source": [
     "num = 5\n",
-    "\n",
+    "#j = num\n",
     "for i in range(1,num):\n",
     "    a = i * j\n",
     "    j = a\n",
@@ -202,17 +213,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "382336c9-f00e-4612-97ca-ae2e25b5199f",
+   "cell_type": "markdown",
+   "id": "f02f5372-7503-4330-98b9-feb2074c0357",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "how to find factorial of num "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7a0de7f0-bcd0-42ee-8f15-726aa1e33e5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the number:  6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Factorial of 6 is 720\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Enter the number: \"))\n",
+    "t = num\n",
+    "for i in range(1,num):\n",
+    "    j = i*t\n",
+    "    t = j\n",
+    "print(\"Factorial of\", num ,\"is\",j)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a0de7f0-bcd0-42ee-8f15-726aa1e33e5a",
+   "id": "255f51ff-6f65-428e-a44e-10185e3961f5",
    "metadata": {},
    "outputs": [],
    "source": []
