--- a/practical_3.ipynb
+++ b/practical_3.ipynb
@@ -2,6 +2,110 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "id": "88a80c37-9f60-4bf7-9723-81a1838ddb92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "j\n",
+      "a\n",
+      "c\n",
+      "k\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"jack\"\n",
+    "place=[\"mumbai\", \"kalyan\", \"pune\"]\n",
+    "for i in name:\n",
+    "    if i ==\"c\":\n",
+    "        break\n",
+    "    print(i)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "42faaa7b-7d3f-41fa-acfa-e859b37e4a59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "parbeep mumbai 1\n",
+      "parbeep mumbai 2\n",
+      "parbeep mumbai 3\n",
+      "parbeep kalyan 1\n",
+      "parbeep kalyan 2\n",
+      "parbeep kalyan 3\n",
+      "parbeep pune 1\n",
+      "parbeep pune 2\n",
+      "parbeep pune 3\n",
+      "Pardeep_ki_chachi mumbai 1\n",
+      "Pardeep_ki_chachi mumbai 2\n",
+      "Pardeep_ki_chachi mumbai 3\n",
+      "Pardeep_ki_chachi kalyan 1\n",
+      "Pardeep_ki_chachi kalyan 2\n",
+      "Pardeep_ki_chachi kalyan 3\n",
+      "Pardeep_ki_chachi pune 1\n",
+      "Pardeep_ki_chachi pune 2\n",
+      "Pardeep_ki_chachi pune 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = [\"parbeep\", \"Pardeep_ki_chachi\"]\n",
+    "place=[\"mumbai\", \"kalyan\", \"pune\"]\n",
+    "n = [\"1\", \"2\",\"3\"]\n",
+    "for i in name:\n",
+    "    for j in place:\n",
+    "        for k in n:\n",
+    "            print(i , j, k)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "b6e3105b-e0af-41dd-b601-eebfcbbb82f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter the num:  12\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"enter the num: \"))\n",
+    "\n",
+    "for i in range(0,num+1,2):  # (starting point, end point, step)\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "c5a56636-f70e-4b55-99ba-d552d7b5af9a",
    "metadata": {
@@ -22,10 +126,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "af578fc6-6ed9-4168-bbb8-70750ddd5f29",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s\n",
+      "u\n",
+      "u\n",
+      "n\n",
+      "n\n",
+      "y\n"
+     ]
+    }
+   ],
    "source": [
     "name=\"sunny\"\n",
     "vov = \"aiou\"\n",
@@ -59,10 +176,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "d9dba63b-36f6-4557-a5aa-f9ed7f28e364",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s\n",
+      "n\n",
+      "n\n",
+      "y\n"
+     ]
+    }
+   ],
    "source": [
     "name=\"sunny\"\n",
     "vov = \"aiou\"\n",
@@ -171,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 84,
    "id": "85f1649f-d800-4a7e-b23d-40fdfc34e4ab",
    "metadata": {},
    "outputs": [
@@ -179,20 +307,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
-      "10\n",
-      "30\n",
-      "120\n"
+      "120\n",
+      "240\n",
+      "720\n",
+      "2880\n"
      ]
     }
    ],
    "source": [
     "num = 5\n",
-    "#j = num\n",
+    "\n",
     "for i in range(1,num):\n",
-    "    a = i * j\n",
-    "    j = a\n",
-    "    print(j)\n"
+    "    a = i * a\n",
+    "    print(a)\n"
    ]
   },
   {
@@ -222,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 82,
    "id": "7a0de7f0-bcd0-42ee-8f15-726aa1e33e5a",
    "metadata": {},
    "outputs": [
@@ -230,14 +357,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the number:  6\n"
+      "Enter the number:  5\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Factorial of 6 is 720\n"
+      "Factorial of 5 is 120\n"
      ]
     }
    ],
@@ -245,8 +372,7 @@
     "num = int(input(\"Enter the number: \"))\n",
     "t = num\n",
     "for i in range(1,num):\n",
-    "    j = i*t\n",
-    "    t = j\n",
+    "    t = t*i\n",
     "print(\"Factorial of\", num ,\"is\",j)"
    ]
   },
@@ -256,7 +382,9 @@
    "id": "255f51ff-6f65-428e-a44e-10185e3961f5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
