--- a/some_question.ipynb
+++ b/some_question.ipynb
@@ -128,8 +128,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "92aeba09-78b7-49d6-ae73-8bf3e1510331",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n",
+      "e\n",
+      "j\n",
+      "k\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "al = [\"a\", \"b\", \"c\", \"d\", \"e\", \"j\", \"k\"]\n",
+    "l = [0, 1, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "i = 0\n",
+    "while i < len(al):\n",
+    "    if i == \"e\":\n",
+    "        i+=1\n",
+    "        continue\n",
+    "    print(al[i])\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9f4df9c1-b771-4194-b2ac-081a3973edcb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "print(len(l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b470011-205a-4c52-943d-1fcf84be57fe",
    "metadata": {},
    "outputs": [],
    "source": []
