While loop in Some_question Folder

--- a/Practical4.ipynb
+++ b/Practical4.ipynb
@@ -150,18 +150,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "6cf7c94d-cdca-4571-8185-ec48472f2fd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "55555\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
    "id": "cc089dfc-adc3-42b6-afec-3403c14ce6fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the number 4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A A A A \n",
+      "A A A A \n",
+      "A A A A \n",
+      "A A A A \n"
+     ]
+    }
+   ],
    "source": [
     "#10   Pattern\n",
     "\n",
     "num = int(input(\"Enter the number\"))\n",
     "\n",
+    "for i in range(num):\n",
+    "    for j in range(num):\n",
+    "        print('A',end=' ')\n",
+    "    print()\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "9a443469-a793-4013-8ca5-52b79dc50d01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A A A A \n",
+      "A A A A \n",
+      "A A A A \n",
+      "A A A A \n"
+     ]
+    }
+   ],
+   "source": [
+    "rows=4\n",
+    "cols=4\n",
     "\n",
-    "for i in range(num,0,-1):\n",
-    "    print(i*str(i))\n"
+    "for i in range(rows):\n",
+    "    print('A '*cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "6dc51623-a84e-48cb-a3fa-69dfbe31e87f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "**\n",
+      "***\n",
+      "***\n",
+      "***\n",
+      "****\n",
+      "****\n",
+      "****\n",
+      "****\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for i in range(5):\n",
+    "    for j in range(i):\n",
+    "#        print(\"*\", end=\" \")\n",
+    "        print(\"*\"*i)          "
    ]
   },
   {
