list and Tuples

--- a/Sets_Tupple.ipynb
+++ b/Sets_Tupple.ipynb
@@ -63,7 +63,9 @@
    "id": "e94218bc-54c6-48f5-afb3-86581dc44c01",
    "metadata": {},
    "source": [
-    "Sets are uorder, unindex, unchange, and ha"
+    "Sets are uorder, unindex, unchange, and take no duplicates\n",
+    "\n",
+    "            and it only take add and remove value"
    ]
   },
   {
