Dictionaries add to the file

--- a/Dictionaries.ipynb
+++ b/Dictionaries.ipynb
@@ -10,25 +10,25 @@
     "\n",
     "\n",
     "\n",
-    "#### keys is the key of some value it is like a varibale holding some value in it \n",
+    " keys is the key of some value it is like a varibale holding some value in it \n",
     "\n",
-    "#### Value is the value inside the key\n",
+    " Value is the value inside the key\n",
     "\n",
-    "#### \"Get\" is the method in which we use to ge the value inside the key it take only one value as the key\n",
+    " \"Get\" is the method in which we use to ge the value inside the key it take only one value as the key\n",
     "\n",
-    "#### \"Fromkeys\" it is use to assign the value in the for the key in distionary. a single value assign to a key.   \n",
+    " \"Fromkeys\" it is use to assign the value in the for the key in distionary. a single value assign to a key.   \n",
     "\n",
-    "#### \"pop\" it is the method is use to remove the items from the distionry\n",
+    " \"pop\" it is the method is use to remove the items from the distionry\n",
     "\n",
-    "#### \"popitems\" it is use to remove the item from the keys in the distionry\n",
+    " \"popitems\" it is use to remove the item from the keys in the distionry\n",
     "\n",
-    "#### \"Setdefault\" it is use to add the key and value in the distionry and if there is similar key and value it will not add it in the distionry\n",
+    " \"Setdefault\" it is use to add the key and value in the distionry and if there is similar key and value it will not add it in the distionry\n",
     "\n",
-    "#### \"copy\" is use to copy the value from the distionary to any other distionry\n",
+    " \"copy\" is use to copy the value from the distionary to any other distionry\n",
     "\n",
-    "#### \"update\"  is use to  update the value in the distionry\n",
+    " \"update\"  is use to  update the value in the distionry\n",
     "\n",
-    "#### \"Del\" is use to delete the distionry\n"
+    " \"Del\" is use to delete the distionry\n"
    ]
   },
   {
@@ -65,9 +65,7 @@
     "\n",
     "#print(dist.popitem())\n",
     "#dist.setdefault(\"name\",\"jack\")\n",
-    "#print(dist)\n",
-    "\n",
-    "dist."
+    "#print(dist)\n"
    ]
   },
   {
@@ -76,7 +74,9 @@
    "id": "fd0752d9-d2ee-447b-8569-8391e943a912",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
