--- a/some_question.ipynb
+++ b/some_question.ipynb
@@ -161,8 +161,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "96bff42f-f94d-4a55-9686-6b9eb09510e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter the number 11\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 2\n",
+      "11 3\n",
+      "11 4\n",
+      "11 5\n",
+      "11 6\n",
+      "11 7\n",
+      "11 8\n",
+      "11 9\n",
+      "11 10\n",
+      "its prime\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"enter the number\"))\n",
+    "for i in range(2,num):\n",
+    "    print(num, i)\n",
+    "    if num%i==0:\n",
+    "        print(\" its not prime\")\n",
+    "        break\n",
+    "else:\n",
+    "    print(\"its prime\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "9742ec2a-2e17-4f77-8bba-d4fdc7b944a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "it's not a prime\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(2,15):\n",
+    "    if num%i==0:\n",
+    "        print(\"it's not a prime\")\n",
+    "        break\n",
+    "else:\n",
+    "    print(\"prime\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28402e0f-5134-46f1-87e9-720a3906c7bb",
    "metadata": {},
    "outputs": [],
    "source": []
