--- a/Dictionaries.ipynb
+++ b/Dictionaries.ipynb
@@ -70,12 +70,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "fd0752d9-d2ee-447b-8569-8391e943a912",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "brand\n",
+      "model\n",
+      "year\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for i in dist:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "2e4d9f66-ff8b-45a9-b5f0-7951ad8995db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "brand Ford\n",
+      "model Mustang\n",
+      "year 1964\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x, y in dist.items():\n",
+    "    print(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "abd55a32-fb44-479a-a5bd-6e1deda50e17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'sunny', 'apple'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "lis = [\"sunny\",\"sunny\", \"apple\", \"jack\", \"apple\", \"Deep\"]\n",
+    "\n",
+    "\n",
+    "\n",
+    "s = set(lis)\n",
+    "\n",
+    "lis = s\n",
+    "\n",
+    "print(lis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "caf909c9-613c-4b2f-a06c-010ba0fb3e0b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "\n",
+    "\n",
+    "lis = [\"sunny\",\"sunny\", \"apple\", \"jack\", \"apple\", \"Deep\"]"
    ]
   }
  ],
