--- a/Dictionaries.ipynb
+++ b/Dictionaries.ipynb
@@ -28,7 +28,7 @@
     "\n",
     " \"update\"  is use to  update the value in the distionry\n",
     "\n",
-    " \"Del\" is use to delete the distionry\n"
+    " \"Del\" is use to delete the distionry. We can delete range of item's from it too\n"
    ]
   },
   {
