--- a/practice's.ipynb
+++ b/practice's.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 74,
    "id": "89d5d337-b4c0-41c4-9d4c-f9919f25855f",
    "metadata": {},
    "outputs": [
@@ -100,14 +100,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the Number:  5\n"
+      "Enter the Number:  6\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Factorial of 5 is 120cm\n"
+      " Factorial of 6 is 720\n"
      ]
     }
    ],
@@ -121,7 +121,7 @@
     "    return(c)\n",
     "\n",
     "n = int(input(\"Enter the Number: \"))\n",
-    "print(f' Factorial of {n} is {fact(n)}cm')\n"
+    "print(f' Factorial of {n} is {fact(n)}')\n"
    ]
   },
   {
