--- a/Assignment_4.ipynb
+++ b/Assignment_4.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fddf2523-5a7a-4476-ae91-cf2775c50536",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50, 40, 30, 20, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "#1 reverse the tuple\n",
     "\n",
@@ -20,10 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "48622fd6-823c-434b-a632-27495da78c17",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "#2 Access Value 20 in the tuple\n",
     "\n",
@@ -34,10 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fa54593a-e9d0-42ee-8d93-2767fc1eac74",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "(50,)\n"
+     ]
+    }
+   ],
    "source": [
     "#3 Create a Tuple With Single item 50\n",
     "\n",
@@ -50,10 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "30f57612-6bbe-4af7-9598-3958cd368661",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 20 30 40\n"
+     ]
+    }
+   ],
    "source": [
     "#4 Unpack The Following Tuplw into 4 Variable\n",
     "\n",
@@ -64,10 +97,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ea187276-e6cd-4753-9aa8-24e828b0c4d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value of a = (99, 88),  Value of b = (11, 22)\n"
+     ]
+    }
+   ],
    "source": [
     "#5 Swap a and b\n",
     "\n",
@@ -84,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "28442cf8-79cd-4100-b496-0e64be42a43e",
    "metadata": {},
    "outputs": [
@@ -106,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "1aa64de4-076a-4a50-98f1-251dcb13bd33",
    "metadata": {},
    "outputs": [
@@ -131,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "63e79eef-2d7e-4c04-bf94-f9a4b5b7c09a",
    "metadata": {},
    "outputs": [
@@ -157,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "8a0cbde8-2211-4933-92af-7e8bc8326a5e",
    "metadata": {},
    "outputs": [
@@ -180,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "id": "07d93670-019d-4aa0-a7ee-ba1499b90b9f",
    "metadata": {},
    "outputs": [
@@ -208,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "id": "c0b5c891-1235-49e2-9a07-206eba046024",
    "metadata": {},
    "outputs": [
@@ -234,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "id": "3eb07bb0-b1af-4bc0-878c-1dbefbdbf146",
    "metadata": {},
    "outputs": [
@@ -258,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 13,
    "id": "e79adcc3-e6a4-4ec7-bb95-5ff81aeb5de1",
    "metadata": {},
    "outputs": [
@@ -284,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 14,
    "id": "19e3955e-c06b-4ddf-92bf-fb8563ebdc26",
    "metadata": {},
    "outputs": [
@@ -306,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6ece09e9-a59e-4ead-b3e1-12d66620f933",
    "metadata": {},
    "outputs": [],
