--- a/LCM.ipynb
+++ b/LCM.ipynb
@@ -242,8 +242,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "916e8daa-c711-4885-a4b1-b3c7bda6d7c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((lambda a: a[0])(\"hjfgh\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c9a443df-3aad-45e1-912d-66d14cdde2f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((lambda a: len(a)%2==0 )(\"hkjj\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "373c5e73-76f5-4573-87d8-469ae4f650ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((lambda a, b: a if a>b else b )(12, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "2783ccda-c44d-42f1-9de1-286219cf78f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=lambda a, b: a if a>b else b\n",
+    "\n",
+    "print(c(12, 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a3275f0-13fa-4506-962c-ed8f3cfcfdb7",
+   "metadata": {},
+   "source": [
+    "\n",
+    "A\t=\tfinal amount\n",
+    "P\t=\tinitial principal balance\n",
+    "r\t=\tannual interest rate\n",
+    "t\t=\ttime (in years)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "319e9282-06d1-4f17-bdae-4e28c554d9bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17b031b4-e20f-4bd8-b44a-60bbef6695fa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "08494944-c126-4347-8567-8739716b098f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter initial principal balance:  500\n",
+      "Enter annual interest rate 12\n",
+      "Enter the time:  6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "360.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((lambda p, r, t: p*r*t/100)(p = int(input(\"Enter initial principal balance: \")), r = int(input(\"Enter annual interest rate\")), t = int(input(\"Enter the time: \"))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca8c8fa7-7fe3-4476-8ec6-7ec77052e086",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "23b2ccd4-302e-4447-8ffb-e97f858c21a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Even', 'Even', 'b', 'Even', 't']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "l = [\"number\", \"should\", \"bea\", \"grater\", \"thqan\"]\n",
+    "\n",
+    "print(list(map((lambda a: \"Even\" if len(a)%2==0 else a[0]), l)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4a2f608-b31b-425e-ba9e-130eeb62cbfb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63a2af85-a55a-466c-816d-f8d6f693e2cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "0d097848-bb1c-4b75-8a82-dcf687bbe0c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "360.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = lambda p, r, t: p*r*t/100\n",
+    "\n",
+    "print(c(500, 12, 6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "d08aece4-257a-4114-a5f3-c84097a56af6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter the name suono\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['u', 'o', 'o']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#a, e, i, o, and u\n",
+    "\n",
+    "name = (input(\"enter the name\").lower())\n",
+    "\n",
+    "print(list(filter(lambda a: a in \"aeiou\", name)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27a3c7c5-0cf9-4897-8338-79e9ce615115",
    "metadata": {},
    "outputs": [],
    "source": []
