--- a/practical_3.ipynb
+++ b/practical_3.ipynb
@@ -262,10 +262,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6deaeca8-b251-438b-abe2-d5052f6aa41f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s\n",
+      "n\n",
+      "n\n",
+      "y\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:5: SyntaxWarning: \"is\" with 'str' literal. Did you mean \"==\"?\n",
+      "<>:5: SyntaxWarning: \"is\" with 'str' literal. Did you mean \"==\"?\n",
+      "C:\\Users\\admin\\AppData\\Local\\Temp\\ipykernel_3872\\342648664.py:5: SyntaxWarning: \"is\" with 'str' literal. Did you mean \"==\"?\n",
+      "  if i is \"u\" :\n"
+     ]
+    }
+   ],
    "source": [
     "name=\"sunny\"\n",
     "vov = \"aiou\"\n",
@@ -299,18 +320,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "id": "85f1649f-d800-4a7e-b23d-40fdfc34e4ab",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "120\n",
-      "240\n",
-      "720\n",
-      "2880\n"
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m num \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m,num):\n\u001b[1;32m----> 4\u001b[0m     a \u001b[38;5;241m=\u001b[39m i \u001b[38;5;241m*\u001b[39m \u001b[43ma\u001b[49m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(a)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'a' is not defined"
      ]
     }
    ],
@@ -349,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "id": "7a0de7f0-bcd0-42ee-8f15-726aa1e33e5a",
    "metadata": {},
    "outputs": [
@@ -357,14 +379,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the number:  5\n"
+      "Enter the number:  12\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Factorial of 5 is 120\n"
+      "Factorial of 12 is\n"
      ]
     }
    ],
@@ -373,7 +395,7 @@
     "t = num\n",
     "for i in range(1,num):\n",
     "    t = t*i\n",
-    "print(\"Factorial of\", num ,\"is\",j)"
+    "print(\"Factorial of\", num ,\"is\")"
    ]
   },
   {
