--- a/some_question.ipynb
+++ b/some_question.ipynb
@@ -10,10 +10,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d3da2746-9b67-435a-8135-76ac10206f50",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter the number 132\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "entered number is divisible of 2 and 3 \n"
+     ]
+    }
+   ],
    "source": [
     "num = int(input(\"enter the number\"))\n",
     "\n",
@@ -25,10 +40,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "67d8e21e-d962-4bef-9e73-620a1f46c39d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter the number 22\n",
+      "enter the number 444\n",
+      "enter the number 443\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2nd is greatest\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = int(input(\"enter the number\"))\n",
     "num2 = int(input(\"enter the number\"))\n",
@@ -48,10 +80,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a16b25c7-d5e4-462d-a57f-21a0b3ce9b3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter the number 234\n",
+      "enter the 2nd number 45\n",
+      "enter the op 23456\n",
+      "enter any thi 4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "234 45.0 23456 4\n",
+      "Invalid Input\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = int(input(\"enter the number\"))\n",
     "num2 = float(input(\"enter the 2nd number\"))\n",
@@ -77,10 +128,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "92aeba09-78b7-49d6-ae73-8bf3e1510331",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n",
+      "j\n",
+      "k\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -96,21 +160,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f4df9c1-b771-4194-b2ac-081a3973edcb",
+   "cell_type": "markdown",
+   "id": "66fdf025-0da5-4d5b-8b81-ba901329b4c1",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "for i in range"
+    "### for i in range"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "7b470011-205a-4c52-943d-1fcf84be57fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n",
+      "55\n",
+      "77\n",
+      "77\n",
+      "77\n",
+      "9\n",
+      "11\n",
+      "11\n",
+      "11\n"
+     ]
+    }
+   ],
    "source": [
     "#find the greatest number in the list\n",
     "\n",
@@ -124,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "id": "049e9291-1049-4876-956c-c499ce4f3b94",
    "metadata": {},
    "outputs": [
@@ -135,17 +213,17 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m k \u001b[38;5;241m=\u001b[39m l[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m l:\n\u001b[1;32m----> 5\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mk\u001b[49m:\n\u001b[0;32m      6\u001b[0m        k \u001b[38;5;241m=\u001b[39m l\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(k)\n",
+      "Cell \u001b[1;32mIn[38], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m k \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m l:\n\u001b[1;32m----> 5\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mk\u001b[49m \u001b[38;5;129;01mor\u001b[39;00m i \u001b[38;5;241m==\u001b[39m k:\n\u001b[0;32m      6\u001b[0m        k \u001b[38;5;241m=\u001b[39m l\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(k)\n",
       "\u001b[1;31mTypeError\u001b[0m: '>' not supported between instances of 'int' and 'list'"
      ]
     }
    ],
    "source": [
     "l = [10, 4, 55, 77, 9, 11]\n",
-    "k = l[0]\n",
+    "k = 0\n",
     "\n",
     "for i in l:\n",
-    "    if i > k:\n",
+    "    if i > k or i == k:\n",
     "       k = l\n",
     "print(k)\n",
     "\n"
