oops Concepts, Error Handling

--- a/OOPS_Concept.ipynb
+++ b/OOPS_Concept.ipynb
@@ -2,25 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "id": "95f325db-a540-4a9b-bf56-ede7081fb0f6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter the Radius:  5\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "78.5, cm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Area:\n",
     "    def __init__(self, pi=3.14, r= 0):\n",
@@ -35,18 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "id": "ec471264-a365-4d04-97dd-cdefaec76caf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "78.5, cm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Area:\n",
     "    def __init__ (self, r):\n",
@@ -59,29 +36,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": null,
    "id": "181a4fe1-b009-4158-a4e9-13561db51a75",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "enter the operation 12+12\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'list' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[187], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m b\u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124menter the operation\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      8\u001b[0m c\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(b)\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mfilter\u001b[39m(c, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m+\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m+\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     12\u001b[0m         \u001b[38;5;28mprint\u001b[39m(c)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Calculator:\n",
     "    def __init__ (self, n1, opr, n3):\n",
@@ -92,9 +50,9 @@
     "b= input(\"enter the operation\")\n",
     "c= list(b)\n",
     "\n",
-    "for i in filter(c):\n",
-    "    if i == \"+\":\n",
-    "        print(c)\n",
+    "#for i in filter(c):\n",
+    " #   if i == \"+\":\n",
+    "  #      print(c)\n",
     "\n",
     "        \n",
     "\n",
@@ -107,7 +65,33 @@
    "id": "c188e5e5-39c7-417d-94a6-b17d4f773cab",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#2pai*r\n",
+    "\n",
+    "\n",
+    "class Circle:\n",
+    "    \n",
+    "    pi=3.14\n",
+    "    \n",
+    "    def __init__(self,r):\n",
+    "        self.r= r\n",
+    "\n",
+    "    def area(self):\n",
+    "        aoc = self.pi*r**2\n",
+    "        print(aoc)\n",
+    "\n",
+    "    def cercumference(self):\n",
+    "        cercum = 2*self.pi*r\n",
+    "        print(cercum)\n",
+    "    \n",
+    "\n",
+    "\n",
+    "r=int(input(\"enter the radius: \"))\n",
+    "x = Circle(r)\n",
+    "\n",
+    "x.area()\n",
+    "x.cercumference()\n"
+   ]
   },
   {
    "cell_type": "code",
