--- a/OOPS_Concept.ipynb
+++ b/OOPS_Concept.ipynb
@@ -95,8 +95,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "e62acc6c-3ab5-434b-9b3d-286669d0d597",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Program started...\n",
+      "bmx 2018 and it Run on Top Speed is 200KM/H\n",
+      "jet 2000 and it Fly at Top Speed is 20000KM/H\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehical:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        print(\"Program started...\")\n",
+    "\n",
+    "    def car(self, name, model, speed):\n",
+    "        print(f\"{name} {model} and it Run on Top Speed is {speed}KM/H\")\n",
+    "\n",
+    "    def plan(self, name, model, speed):\n",
+    "         print(f\"{name} {model} and it Fly at Top Speed is {speed}KM/H\")\n",
+    "\n",
+    "\n",
+    "x = Vehical()\n",
+    "x.car(\"bmx\",2018, 200)\n",
+    "x.plan(\"jet\", 2000, 20000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43672df2-780c-447e-8ff0-d1a64bc4df13",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c48318b6-3630-4d55-9143-092de09303ef",
    "metadata": {},
    "outputs": [],
    "source": []
